--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "4.18.2",
+    "mysql": "2.18.1",
+    "nodemon": "2.0.20",
+    "body-parser": "1.20.2"
+  }
 }
