--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,81 @@
-version: "3"
+# version: "3"
+# services:
+
+#   frontend:
+#     build:
+#       dockerfile: Dockerfile.dev
+#       context: ./frontend
+#     container_name: app_frontend
+#     volumes:
+#       - /app/node_modules
+#       - ./frontend:/app
+#     stdin_open: true
+
+#   nginx:
+#     restart: always
+#     build: 
+#       dockerfile: Dockerfile
+#       context: ./nginx
+#     container_name: app_nginx
+#     ports:
+#       - "3000:80"
+
+#   backend:
+#     build:
+#       dockerfile: Dockerfile.dev
+#       context: ./backend
+#     container_name: app_backend
+#     volumes:
+#       - /app/node_modules
+#       - ./backend:/app
+
+version: "2.4"
 services:
 
   frontend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./frontend
+    image: jungmin86/docker-frontend
     container_name: app_frontend
     volumes:
       - /app/node_modules
       - ./frontend:/app
     stdin_open: true
+    mem_limit: 128m
 
   nginx:
     restart: always
-    build: 
-      dockerfile: Dockerfile
-      context: ./nginx
+    image: jungmin86/docker-nginx
     container_name: app_nginx
     ports:
-      - "3000:80"
+      - "80:80"
+    mem_limit: 128m
+    links:
+      - frontend
+      - backend
 
   backend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./backend
+    image: jungmin86/docker-backend
     container_name: app_backend
     volumes:
       - /app/node_modules
       - ./backend:/app
-
-  mysql:
-    build: ./mysql
-    restart: unless-stopped
-    container_name: app_mysql
-    ports: 
-      - "3306:3306"
-    volumes: 
-      - ./mysql/mysql_data:/var/lib/mysql
-      - ./mysql/sqls/:/docker-entrypoint-initdb.d/
     environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: jungmin86
       MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306
+    mem_limit: 128m
+
+  # mysql:
+  #   build: ./mysql
+  #   restart: unless-stopped
+  #   container_name: app_mysql
+  #   ports: 
+  #     - "3306:3306"
+  #   volumes: 
+  #     - ./mysql/mysql_data:/var/lib/mysql
+  #     - ./mysql/sqls/:/docker-entrypoint-initdb.d/
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: jungmin86
+  #     MYSQL_DATABASE: myapp
 
