--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ after_success:
   - docker push jungmin86/docker-nginx
 
 deploy: 
+  edge: true
   provider: elasticbeanstalk
   region: "ap-northeast-2"
   app: "docker-fullstack-app"
